[Fix] Fixed scaling on smaller screens

--- a/src/App.css
+++ b/src/App.css
@@ -52,6 +52,7 @@ h1 {
 
 @media (max-width: 600px) {
   .trackBox {
+    display: block;
     flex-direction: column;
     align-items: center;
   }  
